<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

	<groupId>com.afklm.repindmsv</groupId>
	<artifactId>ultimate-preferences</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>UltimatePreferences</name>
    <description>Map for CBS Ultimate Preferences from RI database to BDM OLD structure</description>

	<parent>
		<groupId>com.afklm.repind</groupId>
		<artifactId>repind-root-cf</artifactId>
		<version>1.0.24-SNAPSHOT</version>
	</parent>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.apache.kafka</groupId>
				<artifactId>kafka-clients</artifactId>
				<version>1.1.1</version>
			</dependency>
			<dependency>
				<!-- Import dependency management from Spring Boot -->
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${springboot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.yaml</groupId>
				<artifactId>snakeyaml</artifactId>
				<version>${yaml.version}</version>
			</dependency>
			<dependency>
				<groupId>com.afklm.soa.jaxws</groupId>
				<artifactId>sdfw-dependencies</artifactId>
				<version>${afws.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

    <properties>
    	<deploy.env>local</deploy.env>
        <java.version>17</java.version>
		<springfox.version>3.0.0</springfox.version>
		<opex.version>2.0.0</opex.version>
		<afws.version>4.0.0</afws.version>
		<yaml.version>2.0</yaml.version>
		<spring-cloud.version>2021.0.5</spring-cloud.version>
		<!-- JaCoCo Properties -->
        <jacoco.version>0.8.8</jacoco.version>
        <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
        <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
        <sonar.language>java</sonar.language>
        <ojdbc.version>12.2.0.1</ojdbc.version>
    </properties>

	<build>
		<resources>
			<resource>
				<filtering>true</filtering>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>**/cloud/config/*.java</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>${springboot.version}</version>
				<executions>
					<execution>
						<id>Copy jar to name-cf.jar</id>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<finalName>${project.name}-cf</finalName>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.6.0</version>
				<groupId>org.codehaus.mojo</groupId>
				<executions>
					<execution>
						<id>update build artifacts</id>
						<phase>package</phase>
						<goals>
							<goal>exec</goal>
						</goals>
						<configuration>
							<executable>jar</executable>
							<commandlineArgs>-uvf '${project.build.directory}'/${project.name}-cf.${project.packaging} .profile</commandlineArgs>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <id>jacoco-initialize</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>jacoco-site</id>
                        <phase>package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>17</source>
					<target>17</target>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>1.18.26</version>
						</path>
						<path>
							<groupId>org.mapstruct</groupId>
							<artifactId>mapstruct-processor</artifactId>
							<version>1.5.3.Final</version>
						</path>
					</annotationProcessorPaths>
					<compilerArgs>
						<compilerArg>
							-Amapstruct.defaultComponentModel=spring
						</compilerArg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<executions>
					<execution>
						<phase>compile</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${basedir}/target/classes/TNS</outputDirectory>
							<resources>
								<resource>
									<directory>${project.parent.basedir}/common/src/main/resources/TNS</directory>
									<filtering>false</filtering>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>
						--add-opens java.base/java.lang=ALL-UNNAMED
						--add-opens java.base/java.util=ALL-UNNAMED
						--add-exports java.base/sun.nio.ch=ALL-UNNAMED
					</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

    <dependencies>
		<!-- Spring -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-cloud-connectors</artifactId>
			<version>2.2.13.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate.validator</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>8.0.0.Final</version>
		</dependency>

		<!-- JDBC -->
		<dependency>
		    <groupId>com.oracle.jdbc</groupId>
		    <artifactId>ojdbc8</artifactId>
		    <version>${ojdbc.version}</version>
			<scope>runtime</scope>
		</dependency>
		
		<!-- JSON -->
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-joda</artifactId>
			<exclusions>
				<exclusion>
					<groupId>joda-time</groupId>
					<artifactId>joda-time</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.mikesamuel</groupId>
			<artifactId>json-sanitizer</artifactId>
			<version>1.2.3</version>
		</dependency>
		
		<dependency>
			<groupId>com.klm.opex</groupId>
			<artifactId>opex-logback</artifactId>
			<version>${opex.version}</version>
		</dependency>

		<dependency>
			<groupId>com.klm.opex</groupId>
			<artifactId>opex-web</artifactId>
			<version>${opex.version}</version>
		</dependency>

		<dependency>
			<groupId>com.klm.opex</groupId>
			<artifactId>opex-core</artifactId>
			<version>${opex.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.ow2.asm</groupId>
					<artifactId>asm</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>com.klm.opex</groupId>
			<artifactId>opex-jaxws</artifactId>
			<version>${opex.version}</version>
		</dependency>
		
		<!-- Airfrance -->
		<dependency>
			<groupId>com.airfrance.soa.security</groupId>
			<artifactId>repind-ws-security</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>com.afklm.soa.jaxws</groupId>
			<artifactId>sdfw-starter</artifactId>
		</dependency>

		<dependency>
			<groupId>com.afklm.soa.jaxws</groupId>
			<artifactId>sdfw-consumer-deps</artifactId>
			<version>4.1.2</version>
			<type>pom</type>
			<exclusions>
				<exclusion>  <!-- declare the exclusion here -->
					<groupId>org.glassfish.metro</groupId>
					<artifactId>webservices-rt</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>com.afklm.soa.jaxws.wss</groupId>
			<artifactId>jaxws-sec</artifactId>
			<version>${afws.version}</version>
			<exclusions>
				<exclusion>  <!-- declare the exclusion here -->
					<groupId>org.glassfish.metro</groupId>
					<artifactId>webservices-rt</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>javax.xml.ws</groupId>
			<artifactId>jaxws-api</artifactId>
			<version>2.3.1</version>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.ws</groupId>
			<artifactId>jaxws-rt</artifactId>
			<version>3.0.2</version>
		</dependency>
		<!-- JWT Validation -->
		<dependency>
			<groupId>com.afklm.apim.security</groupId>
			<artifactId>apim-security-filters-springboot3</artifactId>
			<version>${apim-security-filters.version}</version>
		</dependency>

		<!-- Airfrance RI WS W000442-->
		<dependency>
			<groupId>com.afklm.soa.stubs</groupId>
			<artifactId>w000442-v080001-jakarta</artifactId>
			<version>15</version>
		</dependency>



		<!--  Begin For WS Security -->
		<!--  You have to add the dependency of your application security JAR !!!! -->
		<!--  End For WS Security -->

		<!-- MapStruct Mapping -->
		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct</artifactId>
			<version>1.5.3.Final</version>
		</dependency>
		
        <!-- Test -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

		<!-- slf4j -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.26</version>
		</dependency>

		<!--AIR FRANCE-->
		<dependency>
			<groupId>com.afklm.repind</groupId>
			<artifactId>common</artifactId>
			<version>1.0.24-SNAPSHOT</version>
			<scope>compile</scope>
		</dependency>
        <dependency>
            <groupId>org.springframework.data</groupId>
            <artifactId>spring-data-commons</artifactId>
        </dependency>

    </dependencies>

</project>
